style fixing for borders, alignments

--- a/app/js/components/common/MainLayout.css
+++ b/app/js/components/common/MainLayout.css
@@ -9,6 +9,7 @@
 .reportNavBar {
     width: 20%;
     position: relative;
+    border-right: 1px solid;
 }
 
 .reportContent {
