--- a/app/js/components/reports/ListOfDiagnosis/InputBoxLOD.css
+++ b/app/js/components/reports/ListOfDiagnosis/InputBoxLOD.css
@@ -227,7 +227,3 @@ td.rdtYear:hover {
     padding-top: 8px;
     padding-left: 5px;
 }
-
-.toggleContainer {
-    padding: 3px;
-}
