--- a/app/js/components/reports/ListOfUsers/ListOfUsersInputBox.css
+++ b/app/js/components/reports/ListOfUsers/ListOfUsersInputBox.css
@@ -72,5 +72,5 @@ input:checked + .slider:before {
 }
 
 .toggleContainerLOU {
-    padding: 3px;
+    padding-top: 3px;
 }
