--- a/app/js/components/reports/common/ReportAsTableView.css
+++ b/app/js/components/reports/common/ReportAsTableView.css
@@ -11,3 +11,8 @@
 .react-grid-Cell{
       text-align: center;
 }
+
+.TableDivHolder {
+      border-top: 1px solid;
+      overflow: hidden;
+}
